
#
# Name of project
#
PROJECT (GuiQt)

#
# QT include files
#
if(Qt5_FOUND)
    include_directories(${Qt5Core_INCLUDE_DIRS})
    include_directories(${Qt5OpenGL_INCLUDE_DIRS})
    include_directories(${Qt5Network_INCLUDE_DIRS})
    include_directories(${Qt5Widgets_INCLUDE_DIRS})
endif()
IF (QT4_FOUND)
    SET(QT_USE_QTNETWORK TRUE)
    SET(QT_USE_QTOPENGL TRUE)
    INCLUDE(${QT_USE_FILE})
ENDIF ()

#
# Let CMake find files for moc and uic.
#

#
# With AUTOMOC, do not need to specify files
# that contain Q_OBJECT macro for Qt to process with 'moc'
# (meta-object compiler).
#
IF(WORKBENCH_USE_CMAKE_AUTOMOC)
    SET(CMAKE_AUTOMOC ON)
    SET(CMAKE_AUTOUIC ON)
ELSE()
    SET(FORMS
        MovieDialog.ui
       )

    SET(MOC_INPUT_HEADER_FILES
        AboutWorkbenchDialog.h
        AnnotationChangeCoordinateDialog.h
        AnnotationColorWidget.h
        AnnotationCoordinateSelectionWidget.h
        AnnotationCoordinateSpaceWidget.h
        AnnotationCoordinateWidget.h
        AnnotationCreateDialog.h
        AnnotationDeleteWidget.h
        AnnotationFontWidget.h
        AnnotationFormatWidget.h
        AnnotationInsertNewWidget.h
        AnnotationLineArrowTipsWidget.h
        AnnotationMenuArrange.h
        AnnotationMenuFileSelection.h
        AnnotationRedoUndoWidget.h
        AnnotationRotationWidget.h
        AnnotationSelectionViewController.h
        AnnotationPasteDialog.h
        AnnotationTextAlignmentWidget.h
        AnnotationTextEditorDialog.h
        AnnotationTextEditorWidget.h
        AnnotationTextOrientationWidget.h
        AnnotationTextSubstitutionViewController.h
        AnnotationWidthHeightWidget.h
        BalsaDatabaseUploadSceneFileDialog.h
        BalsaStudySelectionDialog.h
        BorderEditingSelectionDialog.h
        BorderFileSplitDialog.h
        BorderOptimizeDialog.h
        BorderPropertiesEditorDialog.h
        BorderSelectionViewController.h
        BrainBrowserWindow.h
        BrainBrowserWindowComboBox.h
        BrainBrowserWindowOrientedToolBox.h
        BrainBrowserWindowToolBar.h
        BrainBrowserWindowToolBarChartAttributes.h
        BrainBrowserWindowToolBarChartAxes.h
        BrainBrowserWindowToolBarChartTwoAttributes.h
        BrainBrowserWindowToolBarChartTwoAxes.h
        BrainBrowserWindowToolBarChartTwoOrientation.h
        BrainBrowserWindowToolBarChartTwoTitle.h
        BrainBrowserWindowToolBarChartTwoType.h
        BrainBrowserWindowToolBarChartType.h
        BrainBrowserWindowToolBarClipping.h
        BrainBrowserWindowToolBarComponent.h
        BrainBrowserWindowToolBarSlicePlane.h
        BrainBrowserWindowToolBarSliceSelection.h
        BrainBrowserWindowToolBarSurfaceMontage.h
        BrainBrowserWindowToolBarTab.h
        BrainBrowserWindowToolBarTabPopUpMenu.h
        BrainBrowserWindowToolBarVolumeMontage.h
        BrainOpenGLWidget.h
        BugReportDialog.h
        CaretColorEnumComboBox.h
        CaretColorEnumMenu.h
        CaretDataFileSelectionComboBox.h
        CaretFileDialog.h
        CaretFileDialogExtendable.h
        CaretFileRemoteDialog.h
        CaretMappableDataFileAndMapSelector.h
        CaretMappableDataFileAndMapSelectorObject.h
        ChartHistoryViewController.h
        ChartLinesSelectionViewController.h
        ChartMatrixParcelSelectionViewController.h
        ChartMatrixSeriesSelectionViewController.h
        ChartTwoOverlaySetViewController.h
        ChartTwoOverlayViewController.h
        ChartSelectionViewController.h
        ChartToolBoxViewController.h
        CiftiConnectivityMatrixViewController.h
        CiftiParcelSelectionComboBox.h
        ClippingPlanesDialog.h
        ColorEditorWidget.h
	CopyPaletteColorMappingToFilesDialog.h
        CustomViewDialog.h
        DataFileContentCopyMoveDialog.h
        DisplayGroupAndTabItemViewController.h
        DisplayGroupEnumComboBox.h
        EnumComboBoxTemplate.h
        FiberOrientationSelectionViewController.h
        FiberSamplesOpenGLWidget.h
        FociProjectionDialog.h
        FociPropertiesEditorDialog.h
        FociSelectionViewController.h
        GapsAndMarginsDialog.h
        GiftiLabelTableEditor.h
        GiftiLabelTableSelectionComboBox.h
        GroupAndNameHierarchyViewController.h
        GuiManager.h
        HelpViewerDialog.h
        HyperLinkTextBrowser.h
        IdentifyBrainordinateDialog.h
        ImageCaptureDialog.h
        ImageFileConvertToVolumeFileDialog.h
        ImageSelectionViewController.h
        InformationDisplayDialog.h
        InformationDisplayPropertiesDialog.h
        LabelSelectionViewController.h
	LockAspectWarningDialog.h
        MacApplication.h
        MacDockMenu.h
        MapSettingsChartTwoLineHistoryWidget.h
	MapSettingsColorBarPaletteOptionsWidget.h
        MapSettingsColorBarWidget.h
        MapSettingsFiberTrajectoryWidget.h
        MapSettingsLabelsWidget.h
        MapSettingsLayerWidget.h
        MapSettingsPaletteColorMappingWidget.h
        MapSettingsParcelsWidget.h
        MapYokingGroupComboBox.h
        MetaDataEditorDialog.h
        MetaDataEditorWidget.h
        MovieDialog.h
	OffScreenOpenGLRenderer.h
        OverlaySetViewController.h
        OverlaySettingsEditorDialog.h
        OverlayViewController.h
        PaletteColorMappingEditorDialog.h
        PlotMagnifier.h
        PlotPanner.h
        PreferencesDialog.h
        ProgressReportingDialog.h
        ProgressReportingFromEvent.h
        ProgressReportingWithSlots.h
        RegionOfInterestCreateFromBorderDialog.h
        SceneBasePathWidget.h
        SceneCreateReplaceDialog.h
        SceneDialog.h
	SceneFileInformationDialog.h
	SceneDataFileTreeItemModel.h
        ScenePreviewDialog.h
        SceneReplaceAllDialog.h
        SceneShowOptionsDialog.h
        SpecFileManagementDialog.h
        SplashScreen.h
        StructureEnumComboBox.h
        StructureSurfaceSelectionControl.h
        SurfacePropertiesEditorDialog.h
        SurfaceSelectionViewController.h
	ThresholdingSetMapsDialog.h
        TileTabsConfigurationDialog.h
        UserInputModeAnnotationsContextMenu.h
        UserInputModeAnnotationsWidget.h
        UserInputModeBordersWidget.h
        UserInputModeFociWidget.h
        UserInputModeImageWidget.h
        UserInputModeViewContextMenu.h
        UserInputModeVolumeEditWidget.h
        UserInputTileTabsContextMenu.h
        UsernamePasswordWidget.h
        VolumeFileCreateDialog.h
        VolumeSurfaceOutlineColorOrTabViewController.h
        VolumeSurfaceOutlineSetViewController.h
        VolumeSurfaceOutlineViewController.h
        WuQCollapsibleWidget.h
        WuQDataEntryDialog.h
        WuQDialog.h
        WuQDialogModal.h
        WuQDialogNonModal.h
        WuQDoubleSlider.h
        WuQDoubleSpinBox.h
        WuQEventBlockingFilter.h
        WuQGridLayoutGroup.h
        WuQGroupBoxExclusiveWidget.h
        WuQImageLabel.h
        WuQListWidget.h
        WuQMessageBox.h
        WuQwtPlot.h
        WuQSpecialIncrementDoubleSpinBox.h
        WuQSpinBoxGroup.h
        WuQSpinBoxOddValue.h
	WuQTabBar.h
        WuQTabWidget.h
	WuQTabWidgetWithSizeHint.h
	WuQTextEditorDialog.h
        WuQTimedMessageDisplay.h
        WuQTreeWidget.h
        WuQTrueFalseComboBox.h
        #WuQWebView.h
        WuQWidget.h
        WuQWidgetObjectGroup.h
        ZipSceneFileDialog.h
    )

    IF(Qt5_FOUND)
        QT5_WRAP_CPP(MOC_SOURCE_FILES ${MOC_INPUT_HEADER_FILES})
        QT5_WRAP_UI(FORMS_HEADERS ${FORMS})
    ENDIF()
    IF (QT4_FOUND)
        QT4_WRAP_CPP(MOC_SOURCE_FILES ${MOC_INPUT_HEADER_FILES})
        QT4_WRAP_UI(FORMS_HEADERS ${FORMS})
    ENDIF ()
ENDIF()

#
# Header files
#
SET(SOURCE_FILES
AboutWorkbenchDialog.h
AnnotationChangeCoordinateDialog.h
AnnotationColorWidget.h
AnnotationCoordinateInformation.h
AnnotationCoordinateSelectionWidget.h
AnnotationCoordinateSpaceWidget.h
AnnotationCoordinateWidget.h
AnnotationCreateDialog.h
AnnotationDeleteWidget.h
AnnotationFontWidget.h
AnnotationFormatWidget.h
AnnotationInsertNewWidget.h
AnnotationLineArrowTipsWidget.h
AnnotationMenuArrange.h
AnnotationMenuFileSelection.h
AnnotationPasteDialog.h
AnnotationRedoUndoWidget.h
AnnotationRotationWidget.h
AnnotationSelectionViewController.h
AnnotationTextAlignmentWidget.h
AnnotationTextEditorDialog.h
AnnotationTextEditorWidget.h
AnnotationTextOrientationWidget.h
AnnotationTextSubstitutionViewController.h
AnnotationWidgetParentEnum.h
AnnotationWidthHeightWidget.h
BalsaDatabaseManager.h
BalsaDatabaseUploadSceneFileDialog.h
BalsaStudySelectionDialog.h
BalsaStudyInformation.h
BalsaUserRoles.h
BorderEditingSelectionDialog.h
BorderFileSplitDialog.h
BorderOptimizeDialog.h
BorderOptimizeExecutor.h
BorderPropertiesEditorDialog.h
BorderSelectionViewController.h
BrainBrowserWindow.h
BrainBrowserWindowComboBox.h
BrainBrowserWindowEditMenuItemEnum.h
BrainBrowserWindowOrientedToolBox.h
BrainBrowserWindowToolBar.h
BrainBrowserWindowToolBarChartAttributes.h
BrainBrowserWindowToolBarChartAxes.h
BrainBrowserWindowToolBarChartTwoAttributes.h
BrainBrowserWindowToolBarChartTwoAxes.h
BrainBrowserWindowToolBarChartTwoOrientation.h
BrainBrowserWindowToolBarChartTwoTitle.h
BrainBrowserWindowToolBarChartTwoType.h
BrainBrowserWindowToolBarChartType.h
BrainBrowserWindowToolBarClipping.h
BrainBrowserWindowToolBarComponent.h
BrainBrowserWindowToolBarSlicePlane.h
BrainBrowserWindowToolBarSliceSelection.h
BrainBrowserWindowToolBarSurfaceMontage.h
BrainBrowserWindowToolBarTab.h
BrainBrowserWindowToolBarTabPopUpMenu.h
BrainBrowserWindowToolBarVolumeMontage.h
BrainOpenGLWidget.h
BugReportDialog.h
CaretColorEnumComboBox.h
CaretColorEnumMenu.h
CaretDataFileSelectionComboBox.h
CaretFileDialog.h
CaretFileDialogExtendable.h
CaretFileRemoteDialog.h
CaretMappableDataFileAndMapSelector.h
CaretMappableDataFileAndMapSelectorObject.h
ChartHistoryViewController.h
ChartLinesSelectionViewController.h
ChartMatrixParcelSelectionViewController.h
ChartMatrixSeriesSelectionViewController.h
ChartTwoOverlaySetViewController.h
ChartTwoOverlayViewController.h
ChartSelectionViewController.h
ChartToolBoxViewController.h
CiftiConnectivityMatrixViewController.h
CiftiParcelSelectionComboBox.h
ClippingPlanesDialog.h
ColorEditorWidget.h
CopyPaletteColorMappingToFilesDialog.h
CursorDisplayScoped.h
CursorEnum.h
CursorManager.h
CustomViewDialog.h
DataFileContentCopyMoveDialog.h
DisplayGroupAndTabItemTreeWidgetItem.h
DisplayGroupAndTabItemViewController.h
DisplayGroupEnumComboBox.h
EnumComboBoxTemplate.h
EventAnnotationCreateNewType.h
EventAnnotationGetDrawnInWindow.h
EventBrowserWindowDrawingContent.h
EventBrowserWindowCreateTabs.h
EventBrowserWindowGraphicsRedrawn.h
EventBrowserWindowNew.h
EventBrowserWindowTileTabOperation.h
EventGetOrSetUserInputModeProcessor.h
EventGraphicsUpdateAllWindows.h
EventGraphicsUpdateOneWindow.h
EventHelpViewerDisplay.h
EventIdentificationRequest.h
EventImageCapture.h
EventMacDockMenuUpdate.h
EventOperatingSystemRequestOpenDataFile.h
EventOverlaySettingsEditorDialogRequest.h
EventPaletteColorMappingEditorDialogRequest.h
EventShowDataFileReadWarningsDialog.h
EventUpdateInformationWindows.h
EventUpdateVolumeEditingToolBar.h
EventUpdateYokedWindows.h
EventUserInterfaceUpdate.h
FiberOrientationSelectionViewController.h
FiberSamplesOpenGLWidget.h
FociProjectionDialog.h
FociPropertiesEditorDialog.h
FociSelectionViewController.h
GapsAndMarginsDialog.h
GiftiLabelTableEditor.h
GiftiLabelTableSelectionComboBox.h
GroupAndNameHierarchyTreeWidgetItem.h
GroupAndNameHierarchyViewController.h
GuiManager.h
HelpViewerDialog.h
HyperLinkTextBrowser.h
IdentifyBrainordinateDialog.h
ImageCaptureDialog.h
ImageFileConvertToVolumeFileDialog.h
ImageSelectionViewController.h
InformationDisplayDialog.h
InformationDisplayPropertiesDialog.h
KeyEvent.h
LabelSelectionViewController.h
LockAspectWarningDialog.h
MacApplication.h
MacDockMenu.h
MapSettingsChartTwoLineHistoryWidget.h
MapSettingsColorBarPaletteOptionsWidget.h
MapSettingsColorBarWidget.h
MapSettingsFiberTrajectoryWidget.h
MapSettingsLabelsWidget.h
MapSettingsLayerWidget.h
MapSettingsPaletteColorMappingWidget.h
MapSettingsParcelsWidget.h
MapYokingGroupComboBox.h
MetaDataEditorDialog.h
MetaDataEditorWidget.h
MouseEvent.h
MovieDialog.h
OffScreenOpenGLRenderer.h
OverlaySetViewController.h
OverlaySettingsEditorDialog.h
OverlayViewController.h
PaletteColorMappingEditorDialog.h
PlotMagnifier.h
PlotPanner.h
PreferencesDialog.h
ProgressReportingDialog.h
ProgressReportingFromEvent.h
ProgressReportingWithSlots.h
QGLWidgetTextRenderer.h
RegionOfInterestCreateFromBorderDialog.h
SceneBasePathWidget.h
SceneCreateReplaceDialog.h
SceneDialog.h
SceneFileInformationDialog.h
SceneDataFileTreeItem.h
SceneDataFileTreeItemModel.h
ScenePreviewDialog.h
SceneReplaceAllDialog.h
SceneShowOptionsDialog.h
SceneWindowGeometry.h
SpecFileManagementDialog.h
SplashScreen.h
StructureEnumComboBox.h
StructureSurfaceSelectionControl.h
SurfacePropertiesEditorDialog.h
SurfaceSelectionViewController.h
ThresholdingSetMapsDialog.h
TileTabsConfigurationDialog.h
UserInputModeAbstract.h
UserInputModeAnnotations.h
UserInputModeAnnotationsContextMenu.h
UserInputModeAnnotationsWidget.h
UserInputModeBorders.h
UserInputModeBordersWidget.h
UserInputModeFociWidget.h
UserInputModeFoci.h
UserInputModeImageWidget.h
UserInputModeImage.h
UserInputModeView.h
UserInputModeViewContextMenu.h
UserInputModeVolumeEdit.h
UserInputModeVolumeEditWidget.h
UserInputTileTabsContextMenu.h
UsernamePasswordWidget.h
ViewModeEnum.h
VolumeFileCreateDialog.h
VolumeSurfaceOutlineColorOrTabViewController.h
VolumeSurfaceOutlineSetViewController.h
VolumeSurfaceOutlineViewController.h
WuQCollapsibleWidget.h
WuQDataEntryDialog.h
WuQDialog.h
WuQDialogModal.h
WuQDialogNonModal.h
WuQDoubleSlider.h
WuQDoubleSpinBox.h
WuQEventBlockingFilter.h
WuQFactory.h
WuQGridLayoutGroup.h
WuQGroupBoxExclusiveWidget.h
WuQImageLabel.h
WuQListWidget.h
WuQMessageBox.h
WuQwtPlot.h
WuQSpecialIncrementDoubleSpinBox.h
WuQSpinBoxGroup.h
WuQSpinBoxOddValue.h
WuQTabBar.h
WuQTabWidget.h
WuQTabWidgetWithSizeHint.h
WuQTextEditorDialog.h
WuQTimedMessageDisplay.h
WuQTreeWidget.h
WuQTrueFalseComboBox.h
#WuQWebView.h
WuQWidget.h
WuQWidgetDisabler.h
WuQWidgetObjectGroup.h
WuQtUtilities.h
ZipSceneFileDialog.h

AboutWorkbenchDialog.cxx
AnnotationChangeCoordinateDialog.cxx
AnnotationColorWidget.cxx
AnnotationCoordinateInformation.cxx
AnnotationCoordinateSelectionWidget.cxx
AnnotationCoordinateSpaceWidget.cxx
AnnotationCoordinateWidget.cxx
AnnotationCreateDialog.cxx
AnnotationDeleteWidget.cxx
AnnotationFontWidget.cxx
AnnotationFormatWidget.cxx
AnnotationInsertNewWidget.cxx
AnnotationLineArrowTipsWidget.cxx
AnnotationMenuArrange.cxx
AnnotationMenuFileSelection.cxx
AnnotationPasteDialog.cxx
AnnotationRedoUndoWidget.cxx
AnnotationRotationWidget.cxx
AnnotationSelectionViewController.cxx
AnnotationTextAlignmentWidget.cxx
AnnotationTextEditorDialog.cxx
AnnotationTextEditorWidget.cxx
AnnotationTextOrientationWidget.cxx
AnnotationTextSubstitutionViewController.cxx
AnnotationWidgetParentEnum.cxx
AnnotationWidthHeightWidget.cxx
BalsaDatabaseManager.cxx
BalsaDatabaseUploadSceneFileDialog.cxx
BalsaStudyInformation.cxx
BalsaUserRoles.cxx
BalsaStudySelectionDialog.cxx
BorderEditingSelectionDialog.cxx
BorderFileSplitDialog.cxx
BorderOptimizeDialog.cxx
BorderOptimizeExecutor.cxx
BorderPropertiesEditorDialog.cxx
BorderSelectionViewController.cxx
BrainBrowserWindow.cxx
BrainBrowserWindowComboBox.cxx
BrainBrowserWindowEditMenuItemEnum.cxx
BrainBrowserWindowOrientedToolBox.cxx
BrainBrowserWindowToolBar.cxx
BrainBrowserWindowToolBarChartAttributes.cxx
BrainBrowserWindowToolBarChartAxes.cxx
BrainBrowserWindowToolBarChartTwoAttributes.cxx
BrainBrowserWindowToolBarChartTwoAxes.cxx
BrainBrowserWindowToolBarChartTwoOrientation.cxx
BrainBrowserWindowToolBarChartTwoTitle.cxx
BrainBrowserWindowToolBarChartTwoType.cxx
BrainBrowserWindowToolBarChartType.cxx
BrainBrowserWindowToolBarClipping.cxx
BrainBrowserWindowToolBarComponent.cxx
BrainBrowserWindowToolBarSlicePlane.cxx
BrainBrowserWindowToolBarSliceSelection.cxx
BrainBrowserWindowToolBarSurfaceMontage.cxx
BrainBrowserWindowToolBarTab.cxx
BrainBrowserWindowToolBarTabPopUpMenu.cxx
BrainBrowserWindowToolBarVolumeMontage.cxx
BrainOpenGLWidget.cxx
BugReportDialog.cxx
CaretColorEnumComboBox.cxx
CaretColorEnumMenu.cxx
CaretDataFileSelectionComboBox.cxx
CaretFileDialog.cxx
CaretFileDialogExtendable.cxx
CaretFileRemoteDialog.cxx
CaretMappableDataFileAndMapSelector.cxx
CaretMappableDataFileAndMapSelectorObject.cxx
ChartHistoryViewController.cxx
ChartLinesSelectionViewController.cxx
ChartMatrixParcelSelectionViewController.cxx
ChartMatrixSeriesSelectionViewController.cxx
ChartTwoOverlaySetViewController.cxx
ChartTwoOverlayViewController.cxx
ChartSelectionViewController.cxx
ChartToolBoxViewController.cxx
CiftiConnectivityMatrixViewController.cxx
CiftiParcelSelectionComboBox.cxx
ClippingPlanesDialog.cxx
ColorEditorWidget.cxx
CopyPaletteColorMappingToFilesDialog.cxx
CursorDisplayScoped.cxx
CursorEnum.cxx
CursorManager.cxx
CustomViewDialog.cxx
DataFileContentCopyMoveDialog.cxx
DisplayGroupAndTabItemTreeWidgetItem.cxx
DisplayGroupAndTabItemViewController.cxx
DisplayGroupEnumComboBox.cxx
EventAnnotationCreateNewType.cxx
EventAnnotationGetDrawnInWindow.cxx
EventBrowserWindowDrawingContent.cxx
EventBrowserWindowCreateTabs.cxx
EventBrowserWindowGraphicsRedrawn.cxx
EventBrowserWindowNew.cxx
EventBrowserWindowTileTabOperation.cxx
EventGetOrSetUserInputModeProcessor.cxx
EventGraphicsUpdateAllWindows.cxx
EventGraphicsUpdateOneWindow.cxx
EventHelpViewerDisplay.cxx
EventIdentificationRequest.cxx
EventImageCapture.cxx
EventMacDockMenuUpdate.cxx
EventOperatingSystemRequestOpenDataFile.cxx
EventOverlaySettingsEditorDialogRequest.cxx
EventPaletteColorMappingEditorDialogRequest.cxx
EventShowDataFileReadWarningsDialog.cxx
EventUpdateInformationWindows.cxx
EventUpdateVolumeEditingToolBar.cxx
EventUpdateYokedWindows.cxx
EventUserInterfaceUpdate.cxx
FiberOrientationSelectionViewController.cxx
FiberSamplesOpenGLWidget.cxx
FociProjectionDialog.cxx
FociPropertiesEditorDialog.cxx
FociSelectionViewController.cxx
GapsAndMarginsDialog.cxx
GiftiLabelTableEditor.cxx
GiftiLabelTableSelectionComboBox.cxx
GroupAndNameHierarchyTreeWidgetItem.cxx
GroupAndNameHierarchyViewController.cxx
GuiManager.cxx
HelpViewerDialog.cxx
HyperLinkTextBrowser.cxx
IdentifyBrainordinateDialog.cxx
ImageCaptureDialog.cxx
ImageFileConvertToVolumeFileDialog.cxx
ImageSelectionViewController.cxx
InformationDisplayDialog.cxx
InformationDisplayPropertiesDialog.cxx
KeyEvent.cxx
LabelSelectionViewController.cxx
LockAspectWarningDialog.cxx
MacApplication.cxx
MacDockMenu.cxx
MapSettingsChartTwoLineHistoryWidget.cxx
MapSettingsColorBarPaletteOptionsWidget.cxx
MapSettingsColorBarWidget.cxx
MapSettingsFiberTrajectoryWidget.cxx
MapSettingsLabelsWidget.cxx
MapSettingsLayerWidget.cxx
MapSettingsPaletteColorMappingWidget.cxx
MapSettingsParcelsWidget.cxx
MapYokingGroupComboBox.cxx
MetaDataEditorDialog.cxx
MetaDataEditorWidget.cxx
MouseEvent.cxx
MovieDialog.cxx
OffScreenOpenGLRenderer.cxx
OverlaySetViewController.cxx
OverlayViewController.cxx
OverlaySettingsEditorDialog.cxx
PaletteColorMappingEditorDialog.cxx
PlotMagnifier.cxx
PlotPanner.cxx
PreferencesDialog.cxx
ProgressReportingDialog.cxx
ProgressReportingFromEvent.cxx
ProgressReportingWithSlots.cxx
QGLWidgetTextRenderer.cxx
RegionOfInterestCreateFromBorderDialog.cxx
SceneBasePathWidget.cxx
SceneCreateReplaceDialog.cxx
SceneDialog.cxx
SceneFileInformationDialog.cxx
SceneDataFileTreeItem.cxx
SceneDataFileTreeItemModel.cxx
ScenePreviewDialog.cxx
SceneReplaceAllDialog.cxx
SceneShowOptionsDialog.cxx
SceneWindowGeometry.cxx
SpecFileManagementDialog.cxx
SplashScreen.cxx
StructureEnumComboBox.cxx
StructureSurfaceSelectionControl.cxx
SurfacePropertiesEditorDialog.cxx
SurfaceSelectionViewController.cxx
ThresholdingSetMapsDialog.cxx
TileTabsConfigurationDialog.cxx
UserInputModeAbstract.cxx
UserInputModeAnnotations.cxx
UserInputModeAnnotationsContextMenu.cxx
UserInputModeAnnotationsWidget.cxx
UserInputModeBorders.cxx
UserInputModeBordersWidget.cxx
UserInputModeFoci.cxx
UserInputModeFociWidget.cxx
UserInputModeImage.cxx
UserInputModeImageWidget.cxx
UserInputModeView.cxx
UserInputModeViewContextMenu.cxx
UserInputModeVolumeEdit.cxx
UserInputModeVolumeEditWidget.cxx
UserInputTileTabsContextMenu.cxx
UsernamePasswordWidget.cxx
ViewModeEnum.cxx
VolumeFileCreateDialog.cxx
VolumeSurfaceOutlineColorOrTabViewController.cxx
VolumeSurfaceOutlineSetViewController.cxx
VolumeSurfaceOutlineViewController.cxx
WuQCollapsibleWidget.cxx
WuQDataEntryDialog.cxx
WuQDialog.cxx
WuQDialogModal.cxx
WuQDialogNonModal.cxx
WuQDoubleSlider.cxx
WuQDoubleSpinBox.cxx
WuQEventBlockingFilter.cxx
WuQFactory.cxx
WuQGridLayoutGroup.cxx
WuQGroupBoxExclusiveWidget.cxx
WuQImageLabel.cxx
WuQListWidget.cxx
WuQMessageBox.cxx
WuQwtPlot.cxx
WuQSpecialIncrementDoubleSpinBox.cxx
WuQSpinBoxGroup.cxx
WuQSpinBoxOddValue.cxx
WuQTabBar.cxx
WuQTabWidget.cxx
WuQTabWidgetWithSizeHint.cxx
WuQTextEditorDialog.cxx
WuQTimedMessageDisplay.cxx
WuQTreeWidget.cxx
WuQTrueFalseComboBox.cxx
#WuQWebView.cxx
WuQWidget.cxx
WuQWidgetDisabler.cxx
WuQWidgetObjectGroup.cxx
WuQtUtilities.cxx
ZipSceneFileDialog.cxx
)

#
# Process the header files with moc producing moc_*.cpp files
#
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}
                    ${CMAKE_SOURCE_DIR}/GuiQt)

#
# Create the GUI library
#
ADD_LIBRARY(GuiQt
    ${FORMS_HEADERS}
    ${MOC_SOURCE_FILES}
    ${SOURCE_FILES}
)

TARGET_LINK_LIBRARIES(GuiQt ${CARET_QT5_LINK})

INCLUDE_DIRECTORIES(
${CMAKE_SOURCE_DIR}/GuiQt
${Qwt_INCLUDE_DIRS}
${CMAKE_SOURCE_DIR}/Algorithms
${CMAKE_SOURCE_DIR}/Annotations
${CMAKE_SOURCE_DIR}/Brain
${CMAKE_SOURCE_DIR}/Commands
${CMAKE_SOURCE_DIR}/Charting
${CMAKE_SOURCE_DIR}/FilesBase
${CMAKE_SOURCE_DIR}/Files
${CMAKE_SOURCE_DIR}/Cifti
${CMAKE_SOURCE_DIR}/Gifti
${CMAKE_SOURCE_DIR}/Graphics
${CMAKE_SOURCE_DIR}/Nifti
${CMAKE_SOURCE_DIR}/OSMesaDummy
${CMAKE_SOURCE_DIR}/Operations
${CMAKE_SOURCE_DIR}/OperationsBase
${CMAKE_SOURCE_DIR}/Palette
${CMAKE_SOURCE_DIR}/Scenes
${CMAKE_SOURCE_DIR}/Xml
${CMAKE_SOURCE_DIR}/Common
)
